# stock_screener

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: backtest_example.yaml
docs/: financials_periodic_metric_mapping.md
src/stock_screener/: __init__.py  cli.py  config.py
src/stock_screener/backtest/: __init__.py  calendar.py  cli.py  config.py  engine.py  filters.py  optimize.py  portfolio.py  report.py  selection.py
src/stock_screener/collectors/: dart_client.py  dart_financial_provider.py  fundamental_provider.py  naver_ratio_client.py  pykrx_client.py
src/stock_screener/features/: fundamental_growth.py  metrics.py
src/stock_screener/pipelines/: daily_batch.py
src/stock_screener/screener/: dsl.py
src/stock_screener/storage/: db.py  repository.py
src/stock_screener/web/: app.py  filter_query.py
tests/: conftest.py  test_cli_update_reserve_only.py  test_dsl.py  test_filter_query.py  test_fundamental_growth.py  test_fundamental_provider_merge.py  test_metrics.py  test_naver_ratio_client.py  test_pipeline_coverage.py  test_pykrx_client.py  test_repository.py
tests/backtest/: test_calendar.py  test_config.py  test_engine_smoke.py  test_filters.py  test_report.py  test_repository_queries.py  test_selection.py
